hasqd/tests/coptest/system/pos/008.inp
print tcp self [ info db ]
print tcp self [ i db ]
quit

