hasqd/tests/coptest/system/neg/006.inp
print tcp xself [ 1 ]
quit

